syntax = "proto3";
package rpc;

option go_package = "gitdc.ee.guardtime.com/alphabill/alphabill/internal/rpc/ledger;ledger";

// LedgerProof is proof of the value in Alphabill ledger.
message LedgerProof {
  bytes previous_state_hash = 1;
  // TODO Placeholder for now .finalize when implementing ledger proofs https://guardtime.atlassian.net/browse/AB-50
}
